make my website sexy-4

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         <div class="about container" id="about">
             <div class="row">
                 <div class="col l6 m12 s12">
-                    <div class="about-image-container">
-                        <img class="materialboxed responsive-img z-depth-1 about-img" src="img/about.JPG" alt="About Image" />
+                    <div class="about-image-container z-depth-4">
+                        <img class="materialboxed responsive-img about-img" src="img/about.JPG" alt="About Image" />
                     </div>
                     
                 </div>
@@ -194,23 +194,23 @@
         <div id="skills" class="parallax-container">
             <h3 class="title white-text">Skills</h3>
             <div class="parallax"><img src="img/testimonials-bg.jpg"></div>
-            <div class="carousel">
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/html.png"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/css.png"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/javascript.png"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/bootstrap.png"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/materialize.jpg"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/angular.png"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/react.png"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/node.png"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/socket.png"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/Mongodb.png"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/mysql.jpg"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/python.png"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/perl.jpg"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/Googlemaps.png"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/gitlogo.png"></a>
-                <a class="carousel-item hoverable z-depth-4" ><img class="skill-img" src="img/restapilogo.png"></a>
+            <div class="carousel center-block">
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/html.png"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/css.png"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/javascript.png"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/bootstrap.png"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/materialize.jpg"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/angular.png"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/react.png"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/node.png"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/socket.png"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/Mongodb.png"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/mysql.jpg"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/python.png"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/perl.jpg"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/Googlemaps.png"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/gitlogo.png"></a>
+                <a class="carousel-item " ><img class="skill-img hoverable z-depth-4" src="img/restapilogo.png"></a>
             </div>
         </div>
         
